--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -89,15 +89,18 @@
                             <li>@Html.ActionLink("Warranty", "Index", "Warranty")</li>
                         </ul>
                     </li>
-                    <li class="dropdown">
+                    @*<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Help<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         </ul>
-                    </li>
-                    <li>@Html.ActionLink("LogOut", "LogOut", "Account")</li>  
-                </ul>              
+                    </li>*@
+                    <li>@Html.ActionLink("LogOut", "LogOut", "Account")</li>                    
+                </ul>     
+                <div style="float:right">
+                    <label style="color:whitesmoke;margin-top:15px;float:right" id="UserName"></label>
+                </div>
             </div>
         </div>
     </div>
