Added lease car support and notes to service records

--- a/CarCre/App_Code/MyHelpers.cshtml
+++ b/CarCre/App_Code/MyHelpers.cshtml
@@ -58,6 +58,9 @@
                             <th>
                                 Station ZipCode
                             </th>
+                            <th>
+                                Service Notes
+                            </th>
                         </tr>
                     </thead>
                     <tbody>
@@ -91,6 +94,9 @@
                                 </td>
                                 <td>
                                     @record.StationZipCode
+                                </td>
+                                <td>
+                                    @record.ServiceNote
                                 </td>
                             </tr>
                         }
