--- a/CarCre/Views/OilChange/AddOilChange.cshtml
+++ b/CarCre/Views/OilChange/AddOilChange.cshtml
@@ -39,13 +39,21 @@
                     <td>
                         <input type="date" />
                     </td>
-                </tr>              
+                </tr>
                 <tr>
                     <td>
                         @Html.LabelFor(m => m.StationZipCode)
                     </td>
                     <td>
                         @Html.TextBoxFor(m => m.StationZipCode)                     
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.ServiceNote)
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.ServiceNote)
                     </td>
                 </tr>
                 <tr>
