--- a/CarCre/Views/StateInspection/Index.cshtml
+++ b/CarCre/Views/StateInspection/Index.cshtml
@@ -45,6 +45,9 @@
                     <th>
                         Station ZipCode
                     </th>
+                    <th>
+                        Service Notes
+                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -78,6 +81,9 @@
                         </td>
                         <td>
                             @record.StationZipCode
+                        </td>
+                        <td>
+                            @record.ServiceNote
                         </td>
                     </tr>
                 }
