--- a/CarCre/Views/Warranty/AddWarranty.cshtml
+++ b/CarCre/Views/Warranty/AddWarranty.cshtml
@@ -18,10 +18,10 @@
                 </tr>
                 <tr>
                     <td>
-                        @Html.LabelFor(m => m.WarrantyId)
+                        @Html.LabelFor(m => m.WarrantyProvider)
                     </td>
                     <td>
-                        @Html.TextBoxFor(m => m.WarrantyId)
+                        @Html.TextBoxFor(m => m.WarrantyProvider)
                     </td>
                 </tr>
                 <tr>
