--- a/CarCre/Views/Insurance/Index.cshtml
+++ b/CarCre/Views/Insurance/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Insurance Records</h2>
+<h2>Insurance Information</h2>
 
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
