--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -89,7 +89,8 @@
                             <li>@Html.ActionLink("Warranty", "Index", "Warranty")</li>
                         </ul>
                     </li>
-                    @*<li class="dropdown">
+                    <li>@Html.ActionLink("Lease", "Index", "Lease")</li>
+                    <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Help<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("About", "About", "Home")</li>
