--- a/CarCre/Views/TuneUp/EditTuneUp.cshtml
+++ b/CarCre/Views/TuneUp/EditTuneUp.cshtml
@@ -38,6 +38,9 @@
                         <th>
                             @Html.LabelFor(m => m.StationZipCode)
                         </th>
+                        <th>
+                            @Html.LabelFor(m => m.ServiceNote)
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -65,6 +68,9 @@
                         </td>
                         <td>
                             @Html.TextBoxFor(m => m.StationZipCode)
+                        </td>
+                        <td>
+                            @Html.TextBoxFor(m => m.ServiceNote)
                         </td>
                     </tr>
                 </tbody>
