Only displays repair/insurance/warranty/lease records that belong to currently logged-in user

--- a/CarCre/Views/Warranty/Index.cshtml
+++ b/CarCre/Views/Warranty/Index.cshtml
@@ -56,7 +56,7 @@
                         </td>
 
                         <td>
-                            @record.VehicleId
+                            @Html.DropDownList("VehhicleDropdown", new SelectList(record.Vehicles, "Value", "Text", record.VehicleId))
                         </td>
                         <td>
                             @record.WarrantyProvider
