--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -63,7 +63,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Google Maps", "SearchPlace", "GoogleMaps")</li>                  
+                    <li>@Html.ActionLink("Google Maps", "SearchPlace", "GoogleMaps")</li>  
+                    <li>@Html.ActionLink("Service Stations", "Index", "ServiceStations")</li> 
                     <li>@Html.ActionLink("Vehicles", "Index", "Vehicle")</li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Maintainenance<span class="caret"></span></a>
